// Original file: proto/shithead.proto


export interface GetDiscardResponse {
  'currentValue'?: (string);
  'currentCard'?: (string);
  'id'?: (string);
  'repeatCount'?: (number);
  'cards'?: (string)[];
  '_currentValue'?: "currentValue";
  '_currentCard'?: "currentCard";
}

export interface GetDiscardResponse__Output {
  'currentValue'?: (string);
  'currentCard'?: (string);
  'id'?: (string);
  'repeatCount'?: (number);
  'cards'?: (string)[];
}
